Added arena car handler
