# server/handler/player/arena_handler.go
@@ -93,3 +93,33 @@ func GetArenaOwnerHandler(ctx *gin.Context) {
 	arenaId := ctx.Request.URL.Query().Get("id")
 	arena.GetArenaOwnerService(ctx, arenaId)
 }
+
+// AddCarToSlotHandler adds a car to the player's slot in a specific arena.
+// @Summary Add a car to arena
+// @Description Add a car to the player's slot in a specific arena
+// @Tags Arena
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Player Access token"
+// @Param addCarReq body request.AddCarArenaRequest true "Add car to slot request payload"
+// @Success 200 {object} response.Success "Car added to slot successfully"
+// @Failure 400 {object} response.Success "Bad request. Invalid payload"
+// @Failure 404 {object} response.Success "Car or player not found"
+// @Failure 500 {object} response.Success "Internal server error"
+// @Router /arena/add-car [post]
+func AddCarToSlotHandler(ctx *gin.Context) {
+	playerId, exists := ctx.Get(utils.PLAYERID)
+	if !exists {
+		response.ShowResponse(utils.UNAUTHORIZED, utils.HTTP_UNAUTHORIZED, utils.FAILURE, nil, ctx)
+		return
+	}
+	var addCarReq request.AddCarArenaRequest
+	err := utils.RequestDecoding(ctx, &addCarReq)
+	if err != nil {
+		response.ShowResponse(err.Error(), utils.HTTP_BAD_REQUEST, utils.FAILURE, nil, ctx)
+		return
+	}
+
+	arena.AddCarToSlotService(ctx, addCarReq, playerId.(string))
+
+}
